codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__hooks_browser_view__tests__hooks_browser_additional_context_limit.snap
---
source: tui/src/bottom_pane/hooks_browser_view.rs
assertion_line: 1138
expression: "render_lines(&view, 112)"
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ PreToolUse hooks                                                                                             │
│ Turn hooks on or off. Your changes are saved automatically.                                                  │
│                                                                                                              │
│› [x] Hook 1                                                                                                  │
│                                                                                                              │
│  Event     PreToolUse                                                                                        │
│  Matcher   Bash                                                                                              │
│  Source    User config - /tmp/hooks.json                                                                     │
│  Command   /tmp/pre-tool-use.sh                                                                              │
│  Mode      Sync                                                                                              │
│  Timeout   30s                                                                                               │
│  Context   unlimited                                                                                         │
│  Trust     Trusted                                                                                           │
│                                                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
  space/enter toggle · esc back
