codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__hooks_browser_view__tests__hooks_browser_events_with_issues.snap
---
source: tui/src/bottom_pane/hooks_browser_view.rs
assertion_line: 1070
expression: "render_lines(&view, 112)"
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ Hooks                                                                                                        │
│ Lifecycle hooks from config and enabled plugins.                                                             │
│                                                                                                              │
│ Issues                                                                                                       │
│ ⚠ skipped invalid matcher for PreToolUse                                                                     │
│ ■ /tmp/hooks.json: failed to parse hooks config                                                              │
│                                                                                                              │
│ Event                 Installed   Active      Description                                                    │
│                                                                                                              │
│› PreToolUse            0           0           Before a tool executes                                        │
│  PermissionRequest     0           0           When permission is requested                                  │
│  PostToolUse           0           0           After a tool executes                                         │
│  PreCompact            0           0           Before context compaction                                     │
│  PostCompact           0           0           After context compaction                                      │
│  SessionStart          0           0           When a new session starts                                     │
│  SessionEnd            0           0           Right before a session ends                                   │
│  UserPromptSubmit      0           0           When the user submits a prompt                                │
│↓                                                                                                             │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
  enter details · esc close
