codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__hooks_browser_view__tests__hooks_browser_handlers.snap
---
source: tui/src/bottom_pane/hooks_browser_view.rs
assertion_line: 1080
expression: "render_lines(&view, 112)"
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ PreToolUse hooks                                                                                             │
│ Turn hooks on or off. Your changes are saved automatically.                                                  │
│                                                                                                              │
│› [x] Hook 1                                                                                                  │
│  [ ] Hook 2                                                                                                  │
│                                                                                                              │
│  Event     PreToolUse                                                                                        │
│  Matcher   Bash                                                                                              │
│  Source    Plugin - superpowers@openai-curated                                                               │
│  Command   ${CODEX_PLUGIN_ROOT}/hooks/pre-tool-use-check.sh                                                  │
│  Mode      Sync                                                                                              │
│  Timeout   30s                                                                                               │
│  Trust     Trusted                                                                                           │
│                                                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
  space/enter toggle · esc back
