codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__hooks_browser_view__tests__hooks_browser_mcp_tool_handler.snap
---
source: tui/src/bottom_pane/hooks_browser_view.rs
assertion_line: 1109
expression: "render_lines(&view, 112)"
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ PreToolUse hooks                                                                                             │
│ Turn hooks on or off. Your changes are saved automatically.                                                  │
│                                                                                                              │
│› [x] Hook 1                                                                                                  │
│                                                                                                              │
│  Event     PreToolUse                                                                                        │
│  Matcher   Bash                                                                                              │
│  Source    Plugin - security-tools@openai-curated                                                            │
│  MCP Server scanner                                                                                          │
│  MCP Tool  scan_file                                                                                         │
│  Timeout   30s                                                                                               │
│  Trust     Trusted                                                                                           │
│                                                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
  space/enter toggle · esc back
